--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	<section id="banner">
 		<div class="inner">
 			<header>
-				<h1>안녕하세요 잘 부탁드립니다.</h1>
-				<p>열정 개발자가 되고싶은 오윤록 포트폴리오입니다.</p>
+				<h1>안녕하세요.</h1>
+				<p>열정적인 개발자가 되고싶은 오윤록 포트폴리오입니다.</p>
 			</header>
 			<a href="#main" class="button big scrolly">Learn More</a>
 		</div>
@@ -45,25 +45,20 @@
 					<div class="col col1">
 						<div class="image round fit">
 							<a href="generic.html" class="link"><img
-								src="images/pic01.jpg" alt="" /></a>
+								src="images/ohyunrok.jpg" alt="" /></a>
 						</div>
 					</div>
 					<div class="col col2">
-						<h3>Maecenas a gravida quam</h3>
-						<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue
-							malesuada nibh, a varius odio vehicula aliquet. Aliquam
-							consequat, nunc quis sollicitudin aliquet, enim magna cursus
-							auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum,
-							luctus elit fermentum, porta augue. Nullam ultricies, turpis at
-							fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh
-							non ex.</p>
-						<p>Sed congue malesuada nibh, a varius odio vehicula aliquet.
-							Aliquam consequat, nunc quis sollicitudin aliquet, enim magna
-							cursus auctor lacinia nunc ex blandit augue. Ut vitae neque
-							fermentum, luctus elit fermentum, porta augue. Nullam ultricies,
-							turpis at fermentum iaculis, nunc justo dictum dui, non aliquet
-							erat nibh non ex.</p>
-						<a href="#" class="button">Learn More</a>
+						<h3>About ME</h3>
+						<p>열정적인 개발자</p>
+						<p>
+						대학에서 주전공으로 행정학과 복수전공으로 CRM을 이수하였습니다. 공부를 하던중 데이터마이닝공부를 하다보니 DB나 통계툴에 대해 관심이 생겼고 한국산업인력공단의 
+						KMOVE스쿨이라는 곳에서 JAVA등을 사용한 back-end개발자 과정을 수료하였고
+						 그때부터 어렴풋이 개발자를 꿈꾸게 되었습니다. 그 중 Javascript가 가지고 있는 다양성에 매력을 느끼게 되어 웹 개발자가 되기 위해 많은 노력을 하고 있습니다. 
+						 비록 전공자는 아니지만 JAVA를 사용해서 프로그래밍 하는 방법과 기초지식들을 배웠으며 DB쪽을 더 공부하여 최근에는 SpringMVC, Javascript, jsp, MySQL을 사용해서 
+						 쇼핑몰 페이지를 구축해보았습니다. 현재에 안주하지 않고 지속적으로 노력하는 개발자가 되겠습니다.
+						 </p>
+						<a href="https://github.com/OhYunRok" class="button">Learn More</a>
 					</div>
 				</div>
 			</div>
@@ -111,11 +106,14 @@
 				<div class="flex flex-3">
 					<div class="col align-center">
 						<div class="image round fit">
-							<img src="images/pic03.jpg" alt="" />
+							<img src="images/oeshop.jpg" alt="" />
 						</div>
-						<p>Sed congue elit malesuada nibh, a varius odio vehicula
-							aliquet. Aliquam consequat, nunc quis sollicitudin aliquet.</p>
-						<a href="#" class="button">Learn More</a>
+						<p>개발기간: 2019.09.20~ 2019.12.02</p>
+						<p>
+						SpringMVC, javascript, jsp 및  MySQL를 사용하여 로그인 기능, 관리자 기능, 상품 등록/수정 기능, 장바구니 기능이 구현된 E-COMMERCE 쇼핑몰 페이지.
+						</p>
+						<p>#Spring#javascript#jsp#MySQL</p>
+						<a href="https://github.com/OhYunRok/k-moveOYR.git" class="button">Learn More</a>
 					</div>
 					<div class="col align-center">
 						<div class="image round fit">
