--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div class="flex flex-2">
 					<div class="col col1">
 						<div class="image round fit">
-							<a href="generic.html" class="link"><img
+							<a href="#" class="link"><img
 								src="images/ohyunrok.jpg" alt="" /></a>
 						</div>
 					</div>
@@ -58,7 +58,7 @@
 						 비록 전공자는 아니지만 JAVA를 사용해서 프로그래밍 하는 방법과 기초지식들을 배웠으며 DB쪽을 더 공부하여 최근에는 SpringMVC, Javascript, jsp, MySQL을 사용해서 
 						 쇼핑몰 페이지를 구축해보았습니다. 현재에 안주하지 않고 지속적으로 노력하는 개발자가 되겠습니다.
 						 </p>
-						<a href="https://github.com/OhYunRok" class="button">Learn More</a>
+						<a href="https://github.com/OhYunRok" class="button">Go GitHub</a>
 					</div>
 				</div>
 			</div>
@@ -69,26 +69,17 @@
 			<div class="inner">
 				<div class="flex flex-2">
 					<div class="col col2">
-						<h3>Suspendisse quis massa vel justo</h3>
-						<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue
-							malesuada nibh, a varius odio vehicula aliquet. Aliquam
-							consequat, nunc quis sollicitudin aliquet, enim magna cursus
-							auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum,
-							luctus elit fermentum, porta augue. Nullam ultricies, turpis at
-							fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh
-							non ex.</p>
-						<p>Sed congue malesuada nibh, a varius odio vehicula aliquet.
-							Aliquam consequat, nunc quis sollicitudin aliquet, enim magna
-							cursus auctor lacinia nunc ex blandit augue. Ut vitae neque
-							fermentum, luctus elit fermentum, porta augue. Nullam ultricies,
-							turpis at fermentum iaculis, nunc justo dictum dui, non aliquet
-							erat nibh non ex.</p>
+						<h3>Skill</h3>
+						<p>Language - JAVA, R</p>
+						<p>Frame Work - Spring</p>
+						<p>Web - HTML5, CSS3, jQuery</p>
+						<p>DataBase - MySQL, Oracle</p>	
 						<a href="#" class="button">Learn More</a>
 					</div>
 					<div class="col col1 first">
 						<div class="image round fit">
-							<a href="generic.html" class="link"><img
-								src="images/pic02.jpg" alt="" /></a>
+							<a href="#" class="link"><img
+								src="images/logojava.jpg" alt="" /></a>
 						</div>
 					</div>
 				</div>
@@ -99,9 +90,8 @@
 		<section class="wrapper style1">
 			<div class="inner">
 				<header class="align-center">
-					<h2>Aliquam ipsum purus dolor</h2>
-					<p>Cras sagittis turpis sit amet est tempus, sit amet
-						consectetur purus tincidunt.</p>
+					<h2>Personal Project</h2>
+
 				</header>
 				<div class="flex flex-3">
 					<div class="col align-center">
