--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<div class="col col1 first">
 						<div class="image round fit">
 							<a href="#" class="link"><img
-								src="images/logojava.jpg" alt="" /></a>
+								src="images/javalo.jpg" alt="" /></a>
 						</div>
 					</div>
 				</div>
