--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 	<!-- Nav -->
 	<nav id="menu">
 		<ul class="links">
-			<li><a href="index.html">Home</a></li>
+		<!-- 	<li><a href="index.html">Home</a></li> -->
+			<li><a href="#main">About Me</a></li>
+			<li><a href="#skill">Skill</a></li>
+			<li><a href="#project">Project</a></li>
 		</ul>
 	</nav>
 
@@ -65,7 +68,7 @@
 		</section>
 
 		<!-- Section -->
-		<section class="wrapper style2">
+		<section class="wrapper style2" id="skill">
 			<div class="inner">
 				<div class="flex flex-2">
 					<div class="col col2">
@@ -79,7 +82,7 @@
 					<div class="col col1 first">
 						<div class="image round fit">
 							<a href="#" class="link"><img
-								src="images/javalo.jpg" alt="" /></a>
+								src="images/skilLogo.jpg" alt="" /></a>
 						</div>
 					</div>
 				</div>
@@ -87,7 +90,7 @@
 		</section>
 
 		<!-- Section -->
-		<section class="wrapper style1">
+		<section class="wrapper style1" id="">
 			<div class="inner">
 				<header class="align-center">
 					<h2>Personal Project</h2>
