--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<nav id="menu">
 		<ul class="links">
 		<!-- 	<li><a href="index.html">Home</a></li> -->
-			<li><a href="#main">About Me</a></li>
-			<li><a href="#skill">Skill</a></li>
-			<li><a href="#project">Project</a></li>
+			<li><a href="#main" class="button big scrolly">About Me</a></li>
+			<li><a href="#skill" class="button big scrolly">Skill</a></li>
+			<li><a href="#project" class="button big scrolly">Project</a></li>
 		</ul>
 	</nav>
 
@@ -77,7 +77,6 @@
 						<p>Frame Work - Spring</p>
 						<p>Web - HTML5, CSS3, jQuery</p>
 						<p>DataBase - MySQL, Oracle</p>	
-						<a href="#" class="button">Learn More</a>
 					</div>
 					<div class="col col1 first">
 						<div class="image round fit">
@@ -90,7 +89,7 @@
 		</section>
 
 		<!-- Section -->
-		<section class="wrapper style1" id="">
+		<section class="wrapper style1" id="project">
 			<div class="inner">
 				<header class="align-center">
 					<h2>Personal Project</h2>
@@ -112,16 +111,14 @@
 						<div class="image round fit">
 							<img src="images/pic05.jpg" alt="" />
 						</div>
-						<p>Sed congue elit malesuada nibh, a varius odio vehicula
-							aliquet. Aliquam consequat, nunc quis sollicitudin aliquet.</p>
+						<p>준비중입니다.</p>
 						<a href="#" class="button">Learn More</a>
 					</div>
 					<div class="col align-center">
 						<div class="image round fit">
 							<img src="images/pic04.jpg" alt="" />
 						</div>
-						<p>Sed congue elit malesuada nibh, a varius odio vehicula
-							aliquet. Aliquam consequat, nunc quis sollicitudin aliquet.</p>
+						<p>준비중입니다.</p>
 						<a href="#" class="button">Learn More</a>
 					</div>
 				</div>
