--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<nav id="menu">
 		<ul class="links">
 		<!-- 	<li><a href="index.html">Home</a></li> -->
-			<li><a href="#main" class="button big scrolly">About Me</a></li>
-			<li><a href="#skill" class="button big scrolly">Skill</a></li>
-			<li><a href="#project" class="button big scrolly">Project</a></li>
+			<li><a href="#main">About Me</a></li>
+			<li><a href="#skill">Skill</a></li>
+			<li><a href="#project">Project</a></li>
 		</ul>
 	</nav>
 
